# dioxide

./: Makefile.am  benchmark.c  configure.ac  dioxide.h  dioxide.py  flake.nix  jack.py  lead.c  lfo.c  lfo.h  lowpass.c  lowpass.h  main.c  nsinf.c  nsinf.h  sequencer.c  snd.py  timer.c  timer.h  titanium.c  titanium.h  uranium.c  uranium.h
